--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "tailwindcss";
+
+
+@theme {
+  --color-avocado-100: oklch(0.99 0 0);
+}
+
+/* no more tailwind.config.js. Instead just put all configurations here.
+   https://tailwindcss.com/blog/tailwindcss-v4#css-first-configuration
+*/
+/* @theme {
+  --font-display: "Satoshi", "sans-serif";
+  --breakpoint-3xl: 1920px;
+  --color-avocado-100: oklch(0.99 0 0);
+  --color-avocado-200: oklch(0.98 0.04 113.22);
+  --color-avocado-300: oklch(0.94 0.11 115.03);
+  --color-avocado-400: oklch(0.92 0.19 114.08);
+  --color-avocado-500: oklch(0.84 0.18 117.33);
+  --color-avocado-600: oklch(0.53 0.12 118.34);
+  --ease-fluid: cubic-bezier(0.3, 0, 0, 1);
+  --ease-snappy: cubic-bezier(0.2, 0, 0, 1);
+
+   // All these will be added to your CSS to as regular custom properties:
+   :root {
+       --font-display: "Satoshi", "sans-serif";
+        ....
+    }
+} */
+
+button {
+  @apply bg-sky-500 hover:bg-sky-700 px-4 py-2 text-sm leading-5 rounded-full font-semibold text-white;
+}
