--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,5 @@
-<router-outlet></router-outlet>
 
-<!-- <h1 class="text-3xl font-bold underline">
-  Hello world!
-</h1>
-
-<br/><br />
-
-<button>
-  Save changes
-</button> -->
-
+<!-- TODO container class not applied in tailwind version 4-->
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
