--- a/src/styles.css
+++ b/src/styles.css
@@ -29,6 +29,7 @@
     }
 } */
 
-button {
+
+.custombutton {
   @apply bg-sky-500 hover:bg-sky-700 px-4 py-2 text-sm leading-5 rounded-full font-semibold text-white;
 }
