--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,18 @@
 <div class="container">
   <router-outlet></router-outlet>
 </div>
+
+<!-- Font Awesome Test -->
+<!--
+<fa-icon [icon]="faCircleUser" size="xl"></fa-icon>
+<fa-icon [icon]="faHouse"></fa-icon>
+ -->
+<!-- PrimeNg Test -->
+<!-- <div class="card flex justify-center">
+  <p-button label="Check" />
+</div> -->
+
+<!-- Custom Class Test -->
+<!-- <button class="custombutton">
+  Submit
+</button> -->
