--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <!-- TODO container class not applied in tailwind version 4-->
-<div class="container">
+<div class="container mt-4">
   <router-outlet></router-outlet>
 </div>
 
